fixed the password boxes aligning

--- a/css/profile.css
+++ b/css/profile.css
@@ -3,7 +3,8 @@
     color: #000;
 }
 
-.pwdInput {
+input.pwdInput {
+    margin-left: 1.5rem;
     display: none;
     color: #000;
 }
@@ -27,7 +28,9 @@ h2, #buttons {
 
 @media(min-width:576px) {}
 
-@media(min-width:768px) {}
+@media(min-width:768px) {
+
+}
 
 @media(min-width:992px) {}
 
